--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,39 +1,3 @@
-@article{Allenby:1998,
-	title   = {Marketing models of consumer heterogeneity},
-	journal = {Journal of Econometrics},
-	volume  = {89},
-	number  = {1},
-	pages   = {57-78},
-	year    = {1998},
-	author  = {Allenby, G. M. and Rossi, P. E.}
-}
-
-@ARTICLE{Bhat:2011,
-	author  = {Bhat, C.},
-	year    = {2011},
-	title   = {The Maximum Approximate Composite Marginal Likelihood (MACML) Estimation of Multinomial Probit-Based Unordered Response Choice Models},
-	volume  = {45},
-	journal = {Transportation Research Part B: Methodological}
-}
-
-@article{Bierlaire:2010,
-	author  = {Bierlaire, M. and Thémans, M. and Zufferey, N.},
-	year    = {2010},
-	title   = {A Heuristic for Nonlinear Global Optimization},
-	volume  = {22},
-	journal = {INFORMS Journal on Computing},
-}
-
-@article{Bolduc:1999,
-	title   = {A practical technique to estimate multinomial probit models in transportation},
-	journal = {Transportation Research Part B: Methodological},
-	volume  = {33},
-	number  = {1},
-	pages   = {63-79},
-	year    = {1999},
-	author  = {Bolduc, D.}
-}
-
 @book{Bonnans:2006,
   title     = {Numerical optimization: theoretical and practical aspects},
   author    = {Bonnans, J.-F. and Gilbert, J. C. and Lemar{\'e}chal, C. and Sagastiz{\'a}bal, C. A.},
@@ -60,55 +24,6 @@
   publisher = {Wiley Online Library}
 }
 
-@book{Genz:2009,
-  title={Computation of multivariate normal and t probabilities},
-  author={Genz, Alan and Bretz, Frank},
-  volume={195},
-  year={2009},
-  publisher={Springer Science \& Business Media}
-}
-
-@article{Haaijer:1998,
-	author    = {Haaijer, R. and Wedel, M. and Vriens, M. and Wansbeek, T.},
-	journal   = {Marketing Science},
-	number    = {3},
-	pages     = {236--252},
-	publisher = {INFORMS},
-	title     = {Utility Covariances and Context Effects in Conjoint MNP Models},
-	volume    = {17},
-	year      = {1998}
-}
-
-@article{Joe:1995,
-	author    = {Joe, H.},
-	title     = {Approximations to Multivariate Normal Rectangle Probabilities Based on Conditional Expectations},
-	journal   = {Journal of the American Statistical Association},
-	volume    = {90},
-	number    = {431},
-	year      = {1995},
-	publisher = {Taylor & Francis}
-}
-
-@Article{Michelot:2016,
-  title = {{moveHMM}: an {R} package for the statistical modelling of animal movement data using hidden Markov models},
-  author = {Michelot, T. and Langrock, R. and Patterson, T. A.},
-  journal = {Methods in Ecology and Evolution},
-  year = {2016},
-  doi = {10.1111/2041-210X.12578},
-  volume = {7},
-  number = {11},
-  pages = {1308-1315},
-}
-
-@Article{Nash:2011,
-	title   = {Unifying Optimization Algorithms to Aid Software System Users: {optimx} for {R}},
-	author  = {Nash, J. C and Varadhan, R.},
-	journal = {Journal of Statistical Software},
-	year    = {2011},
-	volume  = {43},
-	number  = {9}
-}
-
 @article{Nocedal:2006,
   title     = {Quadratic programming},
   author    = {Nocedal, J. and Wright, S. J.},
@@ -118,47 +33,12 @@
   publisher = {Springer}
 }
 
-@article{Oelschläger:2021,
-  author  = {Oelschl\"ager, L. and Adam, T.},
-  title   = {Detecting Bearish and Bullish Markets in Financial Time Series Using Hierarchical Hidden Markov Models},
-  journal = {Statistical Modelling},
-  year    = {2021},
-  doi     = {10.1177/1471082X211034048}
-}
-
-@Manual{Oelschläger:2023,
-  title   = {optimizeR: Unified Framework for Numerical Optimizer},
-  author  = {Oelschläger, L. and Ötting, M.},
-  year    = {2023},
-  note    = {R package version 0.3.1},
-  url     = {https://CRAN.R-project.org/package=optimizeR}
-}
-
-@Manual{Oelschläger:2023b,
-  title   = {fHMM: Fitting Hidden Markov Models to Financial Data},
-  author  = {Oelschläger, L. and Adam, T. and Michels, R.},
-  year    = {2023},
-  note    = {R package version 1.1.0},
-  url     = {https://loelschlaeger.de/fHMM/}
-}
-
-@article{Paap:2000,
-	author    = {Paap, R. and Franses, P. H.},
-	journal   = {Journal of Applied Econometrics},
-	number    = {6},
-	pages     = {717--744},
-	publisher = {Wiley},
-	title     = {A Dynamic Multinomial Probit Model for Brand Choice with Different Long-Run and Short-Run Effects of Marketing-Mix Variables},
-	volume    = {15},
-	year      = {2000}
-}
-
-@article{Shin:2015,
-	title = {Consumer preferences and willingness to pay for advanced vehicle technology options and fuel types},
-	journal = {Transportation Research Part C: Emerging Technologies},
-	volume = {60},
-	year = {2015},
-	author = {Shin, J. and Bhat, C. R. and You, D. and Garikapati, V. M. and Pendyala, R. M.}
+@Manual{Oelschlaeger:2023,
+  title     = {optimizeR: Unified Framework for Numerical Optimizer},
+  author    = {Oelschläger, L. and Ötting, M.},
+  year      = {2023},
+  note      = {R package version 0.3.1},
+  url       = {https://CRAN.R-project.org/package=optimizeR}
 }
 
 @article{Shireman:2017,
@@ -172,14 +52,6 @@
   publisher = {Springer}
 }
 
-@BOOK{Train:2009,
-	title        = {Discrete choice methods with simulation},
-	author       = {Train, K.},
-	edition      = {2. ed.},
-	publisher    = {Cambridge Univ. Press},
-	year         = {2009}
-}
-
 @book{Wickham:2019,
   title     = {Advanced {R}},
   author    = {Wickham, H.},
@@ -187,20 +59,3 @@
   publisher = {CRC press},
   doi       = {10.1201/9781351201315}
 }
-
-@Manual{Wickham:2023,
-  title = {{dplyr}: A Grammar of Data Manipulation},
-  author = {Wickham, H. and François, R. and Henry, L. and Müller, K. and Vaughan, D.},
-  year = {2023},
-  note = {R package version 1.1.0},
-  url = {https://CRAN.R-project.org/package=dplyr},
-}
-
-@book{Zucchini:2016,
-  title     = {Hidden {Markov Models} for {Time Series}: {An Introduction} {U}sing {R}},
-  author    = {Zucchini, W. and MacDonald, I. L. and Langrock, R.},
-  year      = {2016},
-  publisher = {Chapman \& Hall/CRC},
-  address   = {Boca Raton}
-}
-
